// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownLink renders and anchors to left by default 1`] = `
<DropdownLink
  alwaysRenderMenu={true}
  anchorRight={false}
  caret={true}
  disabled={false}
  menuClasses=""
  onClose={[Function]}
  onOpen={[Function]}
  title="test"
  topLevelClasses="top-level-class"
>
  <DropdownMenu
    alwaysRenderMenu={true}
    keepMenuOpen={false}
    onClose={[Function]}
    onOpen={[Function]}
  >
    <StyledDropdown
      className="dropdown top-level-class"
    >
      <span
        className="dropdown top-level-class css-1gzuaq9-StyledDropdown e1ev5ptt0"
      >
        <a
          className="dropdown-actor dropdown-toggle"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-actor-title"
          >
            <span>
              test
            </span>
            <i
              className="icon-arrow-down"
            />
          </div>
        </a>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div>
            1
          </div>
          <div>
            2
          </div>
        </ul>
      </span>
    </StyledDropdown>
  </DropdownMenu>
</DropdownLink>
`;

exports[`DropdownLink renders and anchors to right 1`] = `
<DropdownLink
  alwaysRenderMenu={true}
  anchorRight={true}
  caret={true}
  disabled={false}
  menuClasses=""
  onClose={[Function]}
  onOpen={[Function]}
  title="test"
  topLevelClasses="top-level-class"
>
  <DropdownMenu
    alwaysRenderMenu={true}
    keepMenuOpen={false}
    onClose={[Function]}
    onOpen={[Function]}
  >
    <StyledDropdown
      className="dropdown top-level-class pull-right anchor-right"
    >
      <span
        className="dropdown top-level-class pull-right anchor-right css-1gzuaq9-StyledDropdown e1ev5ptt0"
      >
        <a
          className="dropdown-actor dropdown-menu-right dropdown-toggle"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-actor-title"
          >
            <span>
              test
            </span>
            <i
              className="icon-arrow-down"
            />
          </div>
        </a>
        <ul
          className="dropdown-menu"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div>
            1
          </div>
          <div>
            2
          </div>
        </ul>
      </span>
    </StyledDropdown>
  </DropdownMenu>
</DropdownLink>
`;
